--- a/index.html
+++ b/index.html
@@ -191,15 +191,15 @@
                             <div class="stats">
                                 <div class="stats-cell">
                                     <div class="stat" data-target="300" data-plus="true">300+</div>
-                                    <div>clients satisfaits</div>
+                                    <div>clients de lavage de vitres/gouttières</div>
                                 </div>
                                 <div class="stats-cell">
                                     <div class="stat" data-target="5">5</div>
                                     <div>années d'expérience</div>
                                 </div>
                                 <div class="stats-cell">
-                                    <div class="stat" data-target="300" data-plus="true">300+</div>
-                                    <div>avis 5 étoiles</div>
+                                    <div class="stat" data-target="300" data-plus="true">200+</div>
+                                    <div>clients de paysagement</div>
                                 </div>
                             </div>
                         </div>
@@ -469,4 +469,5 @@
     <script src="./scripts/index.js"></script>
     <script src="./scripts/testimonials.js"></script>
 </body>
+
 </html>
