--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a href="/" class="active">Accueil</a>
                 </li>
                 <!--<li>
-                    <a href="/forfaits.html">Forfaits</a>
+                    <a href="/forfaits">Forfaits</a>
                 </li>-->
                 <li>
                     <button id="sidebarServicesBtn" class="service-btn">
@@ -73,18 +73,18 @@
                         </svg>
                     </button>
                     <div class="sidebar-services-dropdown" id="sidebarServicesDropdown">
-                        <a class="paysagement-btn" href="/paysagement.html">Paysagement</a>
-                        <a class="vitres-btn" href="/vitres.html">Lavage de vitres</a>
+                        <a class="paysagement-btn" href="/paysagement">Paysagement</a>
+                        <a class="vitres-btn" href="/vitres">Lavage de vitres</a>
                     </div>
                 </li>
                 <li>
-                    <a href="/realisations.html">Réalisations</a>
+                    <a href="/realisations">Réalisations</a>
                 </li>
                 <li>
-                    <a href="/contact.html">Contact</a>
+                    <a href="/contact">Contact</a>
                 </li>
                 <li>
-                    <a href="/a-propos.html">À Propos</a>
+                    <a href="/a-propos">À Propos</a>
                 </li>
                 <li>
                     <button class="cta-btn-inv" id="openFormBtn2">Faire une soumission</button>
@@ -124,7 +124,7 @@
                         <a href="/" class="active">Accueil</a>
                     </li>
                     <!--<li>
-                        <a href="/forfaits.html">Forfaits</a>
+                        <a href="/forfaits">Forfaits</a>
                     </li>-->
                     <li>
                         <button id="servicesBtn" class="service-btn">
@@ -134,18 +134,18 @@
                             </svg>
                         </button>
                         <div class="services-dropdown" id="servicesDropdown">
-                            <a class="dd-p" href="/paysagement.html">Paysagement</a>
-                            <a class="dd-v" href="/vitres.html">Lavage de vitres</a>
+                            <a class="dd-p" href="/paysagement">Paysagement</a>
+                            <a class="dd-v" href="/vitres">Lavage de vitres</a>
                         </div>
                     </li>
                     <li>
-                        <a href="/realisations.html">Réalisations</a>
+                        <a href="/realisations">Réalisations</a>
                     </li>
                     <li>
-                        <a href="/contact.html">Contact</a>
+                        <a href="/contact">Contact</a>
                     </li>
                     <li>
-                        <a href="/a-propos.html">À Propos</a>
+                        <a href="/a-propos">À Propos</a>
                     </li>
                 </ul>
                 <input type="checkbox" id="check">
@@ -170,10 +170,10 @@
                             <h1>Tout simplement</h1>
                             <div class="separate">
                                 <div class="left">
-                                    <a href="/vitres.html">Lavage de vitres</a>
+                                    <a href="/vitres">Lavage de vitres</a>
                                 </div>
                                 <div class="right">
-                                    <a href="/paysagement.html">Paysagement</a>
+                                    <a href="/paysagement">Paysagement</a>
                                 </div>
                             </div>
                         </div>
@@ -252,7 +252,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a class="cta-btn" href="/contact.html">Discuter avec nous</a>
+                            <a class="cta-btn" href="/contact">Discuter avec nous</a>
                         </div>
                         <div class="valeurs-img">
                             <img src="./assets/grid1-p.jpeg" alt="Valeurs">
@@ -349,7 +349,7 @@
                                 <a href="/" class="active">Accueil</a>
                             </li>
                             <!--<li>
-                                <a href="/forfaits.html">Forfaits</a>
+                                <a href="/forfaits">Forfaits</a>
                             </li>-->
                             <li>
                                 <button id="footerServicesBtn" class="service-btn">
@@ -359,18 +359,18 @@
                                     </svg>
                                 </button>
                                 <div class="footer-services-dropdown" id="footerServicesDropdown">
-                                    <a class="paysagement-btn" href="/paysagement.html">Paysagement</a>
-                                    <a class="vitres-btn" href="/vitres.html">Lavage de vitres</a>
+                                    <a class="paysagement-btn" href="/paysagement">Paysagement</a>
+                                    <a class="vitres-btn" href="/vitres">Lavage de vitres</a>
                                 </div>
                             </li>
                             <li>
-                                <a href="/realisations.html">Réalisations</a>
+                                <a href="/realisations">Réalisations</a>
                             </li>
                             <li>
-                                <a href="/contact.html">Contact</a>
+                                <a href="/contact">Contact</a>
                             </li>
                             <li>
-                                <a href="/a-propos.html">À Propos</a>
+                                <a href="/a-propos">À Propos</a>
                             </li>
                         </ul>
                     </div>
@@ -413,12 +413,12 @@
                                 </svg>
                             </div>
                             <div class="socials">
-                                <a href="">
+                                <a href="https://www.facebook.com/p/MW-Multiservices-61562177439152/">
                                     <svg class="e-font-icon-svg e-fab-facebook" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path>
                                     </svg>
                                 </a>
-                                <a href="">
+                                <a href="https://www.instagram.com/mw__multiservices/">
                                     <svg class="e-font-icon-svg e-fab-instagram" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path>
                                     </svg>
@@ -471,4 +471,5 @@
 </body>
 
 </html>
+
 
