--- a/paysagement.html
+++ b/paysagement.html
@@ -165,7 +165,7 @@
                             </video>
                             <div class="video-overlay"></div>
                         </div>
-                        <div class="hero-main">
+                        <div class="hero-main service-hero">
                             <h1>Entretien &<br>Aménagement Paysager</h1>
                             <h2>Transformez vos espaces extérieurs</h2>
                         </div>
@@ -499,3 +499,4 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
