--- a/vitres.html
+++ b/vitres.html
@@ -165,7 +165,7 @@
                             </video>
                             <div class="video-overlay"></div>
                         </div>
-                        <div class="hero-main">
+                        <div class="hero-main service-hero">
                             <h1>Lavage de vitres</h1>
                             <h2>Des vitres impeccables, sans effort</h2>
                         </div>
@@ -437,3 +437,4 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
