--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                         <span>Excellence</span>
                                     </div>
                                     <div class="accordion-content">
-                                        Contenu sur l'excellence...
+                                        <p>Chez MW Multiservices, nous croyons que l’excellence n’est pas un objectif ponctuel, mais une habitude. Chaque projet que nous entreprenons est réalisé avec une attention minutieuse aux détails, un savoir-faire éprouvé et une volonté constante de dépasser les attentes. Que ce soit pour l’aménagement paysager ou le lavage de vitres, nous visons toujours des résultats impeccables qui rehaussent la beauté, la valeur et le confort de votre propriété.</p>
                                     </div>
                                     </div>
                                     <div class="accordion-item">
@@ -235,7 +235,7 @@
                                         <span>Fiabilité</span>
                                     </div>
                                     <div class="accordion-content">
-                                        Contenu sur la fiabilité...
+                                        <p>La confiance se construit sur la constance et l’intégrité. Avec MW Multiservices, vous pouvez compter sur une équipe qui tient parole, qui respecte les délais et qui s’assure que chaque service est livré avec le même niveau de rigueur. Nous savons que vos projets méritent d’être réalisés sans tracas ni mauvaises surprises, et c’est pourquoi nous mettons un point d’honneur à être un partenaire sur lequel vous pouvez vous appuyer en toute tranquillité.</p>
                                     </div>
                                     </div>
                                     <div class="accordion-item">
@@ -248,7 +248,7 @@
                                         <span>Respect</span>
                                     </div>
                                     <div class="accordion-content">
-                                        Contenu sur le respect...
+                                        <p>Le respect est au cœur de notre approche, tant envers nos clients que leur environnement. Nous prenons soin d’écouter vos besoins, de communiquer clairement et de travailler avec courtoisie et professionnalisme. Chaque intervention est réalisée avec attention pour préserver vos espaces et valoriser votre cadre de vie. Pour nous, le respect passe aussi par une attitude responsable, qui reflète notre engagement à bâtir une relation durable et harmonieuse avec chacun de nos clients.</p>
                                     </div>
                                 </div>
                             </div>
@@ -469,3 +469,4 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
