--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://mwmultiservices.ca/">
     <meta property="twitter:title" content="MW Multiservices">
     <meta property="twitter:description" content="MW Multiservices offre des services professionnels d'entretien paysager et de lavage de vitres pour un extérieur impeccable et des fenêtres éclatantes.">
-    <meta property="twitter:image" content="./assets/logo.png">
+    <meta property="twitter:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
 </head>
 <body>
     <div class="root">
@@ -469,4 +469,5 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
 
