--- a/a-propos.html
+++ b/a-propos.html
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://mwmultiservices.ca/a-propos/">
     <meta property="twitter:title" content="MW Multiservices">
     <meta property="twitter:description" content="En savoir plus sur MW Multiservices, notre équipe passionnée et notre engagement à offrir des services d'entretien paysager et de lavage de vitres de qualité.">
-    <meta property="twitter:image" content="./assets/icon.jpg">
+    <meta property="twitter:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
 </head>
 <body>
     <div class="root">
@@ -384,3 +384,4 @@
     <script src="./scripts/script.js"></script>
 </body>
 </html>
+
