--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://mwmultiservices.ca/contact/">
     <meta property="twitter:title" content="MW Multiservices">
     <meta property="twitter:description" content="Contactez MW Multiservices pour un devis personnalisé ou toute question sur nos services d'entretien paysager et de lavage de vitres.">
-    <meta property="twitter:image" content="./assets/icon.jpg">
+    <meta property="twitter:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
 </head>
 <body>
     <div class="root">
@@ -425,5 +425,6 @@
 </body>
 
 </html>
+
 
 
