--- a/forfaits.html
+++ b/forfaits.html
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://mwmultiservices.ca/forfaits/">
     <meta property="twitter:title" content="MW Multiservices">
     <meta property="twitter:description" content="Découvrez les forfaits MW Multiservices pour l'entretien paysager et le lavage de vitres, adaptés à vos besoins et votre budget.">
-    <meta property="twitter:image" content="./assets/icon.jpg">
+    <meta property="twitter:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
 </head>
 <body>
     <div class="root">
@@ -309,3 +309,4 @@
     <script src="./scripts/script.js"></script>
 </body>
 </html>
+
