--- a/paysagement.html
+++ b/paysagement.html
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://mwmultiservices.ca/paysagement/">
     <meta property="twitter:title" content="MW Multiservices">
     <meta property="twitter:description" content="Services d'aménagement et d'entretien paysager pour des extérieurs uniques, durables et soignés.">
-    <meta property="twitter:image" content="./assets/icon.jpg">
+    <meta property="twitter:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
 </head>
 <body>
     <div class="root">
@@ -499,4 +499,5 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
 
