--- a/realisations.html
+++ b/realisations.html
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://mwmultiservices.ca/realisations/">
     <meta property="twitter:title" content="MW Multiservices">
     <meta property="twitter:description" content="Parcourez nos réalisations MW Multiservices et voyez nos projets d'entretien paysager et de lavage de vitres transformant des espaces extérieurs.">
-    <meta property="twitter:image" content="./assets/icon.jpg">
+    <meta property="twitter:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
 </head>
 <body>
     <div class="root">
@@ -377,3 +377,4 @@
     <script src="./scripts/realisations.js"></script>
 </body>
 </html>
+
