--- a/vitres.html
+++ b/vitres.html
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://mwmultiservices.ca/vitres/">
     <meta property="twitter:title" content="MW Multiservices">
     <meta property="twitter:description" content="Lavage de vitres professionnel pour des fenêtres claires, lumineuses et une propriété impeccable.">
-    <meta property="twitter:image" content="./assets/icon.jpg">
+    <meta property="twitter:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
 </head>
 <body>
     <div class="root">
@@ -437,4 +437,5 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
 
