--- a/vitres.html
+++ b/vitres.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://mwmultiservices.ca/vitres/">
     <meta property="og:title" content="MW Multiservices">
     <meta property="og:description" content="Lavage de vitres professionnel pour des fenêtres claires, lumineuses et une propriété impeccable.">
-    <meta property="og:image" content="./assets/icon.jpg">
+    <meta property="og:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mwmultiservices.ca/vitres/">
     <meta property="twitter:title" content="MW Multiservices">
@@ -437,5 +437,6 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
 
 
