--- a/realisations.html
+++ b/realisations.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://mwmultiservices.ca/realisations/">
     <meta property="og:title" content="MW Multiservices">
     <meta property="og:description" content="Parcourez nos réalisations MW Multiservices et voyez nos projets d'entretien paysager et de lavage de vitres transformant des espaces extérieurs.">
-    <meta property="og:image" content="./assets/icon.jpg">
+    <meta property="og:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mwmultiservices.ca/realisations/">
     <meta property="twitter:title" content="MW Multiservices">
@@ -377,4 +377,5 @@
     <script src="./scripts/realisations.js"></script>
 </body>
 </html>
+
 
