--- a/paysagement.html
+++ b/paysagement.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://mwmultiservices.ca/paysagement/">
     <meta property="og:title" content="MW Multiservices">
     <meta property="og:description" content="Services d'aménagement et d'entretien paysager pour des extérieurs uniques, durables et soignés.">
-    <meta property="og:image" content="./assets/icon.jpg">
+    <meta property="og:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mwmultiservices.ca/paysagement/">
     <meta property="twitter:title" content="MW Multiservices">
@@ -499,5 +499,6 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
 
 
