--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://mwmultiservices.ca/">
     <meta property="og:title" content="MW Multiservices">
     <meta property="og:description" content="MW Multiservices offre des services professionnels d'entretien paysager et de lavage de vitres pour un extérieur impeccable et des fenêtres éclatantes.">
-    <meta property="og:image" content="./assets/logo.png">
+    <meta property="og:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mwmultiservices.ca/">
     <meta property="twitter:title" content="MW Multiservices">
@@ -469,5 +469,6 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
 
 
