--- a/forfaits.html
+++ b/forfaits.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://mwmultiservices.ca/forfaits/">
     <meta property="og:title" content="MW Multiservices">
     <meta property="og:description" content="Découvrez les forfaits MW Multiservices pour l'entretien paysager et le lavage de vitres, adaptés à vos besoins et votre budget.">
-    <meta property="og:image" content="./assets/icon.jpg">
+    <meta property="og:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mwmultiservices.ca/forfaits/">
     <meta property="twitter:title" content="MW Multiservices">
@@ -309,4 +309,5 @@
     <script src="./scripts/script.js"></script>
 </body>
 </html>
+
 
