--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://mwmultiservices.ca/contact/">
     <meta property="og:title" content="MW Multiservices">
     <meta property="og:description" content="Contactez MW Multiservices pour un devis personnalisé ou toute question sur nos services d'entretien paysager et de lavage de vitres.">
-    <meta property="og:image" content="./assets/icon.jpg">
+    <meta property="og:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mwmultiservices.ca/contact/">
     <meta property="twitter:title" content="MW Multiservices">
@@ -425,6 +425,7 @@
 </body>
 
 </html>
+
 
 
 
