--- a/a-propos.html
+++ b/a-propos.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://mwmultiservices.ca/a-propos/">
     <meta property="og:title" content="MW Multiservices">
     <meta property="og:description" content="En savoir plus sur MW Multiservices, notre équipe passionnée et notre engagement à offrir des services d'entretien paysager et de lavage de vitres de qualité.">
-    <meta property="og:image" content="./assets/icon.jpg">
+    <meta property="og:image" content="https://www.mwmultiservices.ca/assets/white-icon.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mwmultiservices.ca/a-propos/">
     <meta property="twitter:title" content="MW Multiservices">
@@ -384,4 +384,5 @@
     <script src="./scripts/script.js"></script>
 </body>
 </html>
+
 
