--- a/a-propos.html
+++ b/a-propos.html
@@ -177,22 +177,12 @@
                         <div class="equipe-main">
                             <div class="equipe-cell">
                                 <div class="equipe-img">
-                                    <img src="./assets/amenagement.JPG" alt="">
+                                    <img src="./assets/will_mat.JPG" alt="Présidents">
                                 </div>
                                 <div class="equipe-info">
-                                    <div class="name">William Yelle</div>
-                                    <div class="role">Président</div>
-                                    <div class="about">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit eum hic ducimus iusto aspernatur nobis. Exercitationem voluptates quaerat omnis repudiandae consequuntur nihil nobis tempore magnam sint rem, quae vitae assumenda, sed, modi eaque eos nam aliquam eius officiis earum voluptatibus! Aspernatur ut consectetur dolores? Pariatur illum iure aliquam aliquid aspernatur?</div>
-                                </div>
-                            </div>
-                            <div class="equipe-cell">
-                                <div class="equipe-img">
-                                    <img src="./assets/amenagement.JPG" alt="">
-                                </div>
-                                <div class="equipe-info">
-                                    <div class="name">Mat Boulay</div>
-                                    <div class="role">Président</div>
-                                    <div class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quo perspiciatis, adipisci animi alias facere hic, amet maiores deleniti neque unde a ea, dolores reiciendis aliquid eligendi voluptatum quam. Totam doloremque atque eveniet, itaque explicabo earum ea repellendus odio perspiciatis fugit, labore ullam voluptatibus cumque animi omnis, accusamus iusto voluptate.</div>
+                                    <div class="name">William Yelle & Mat Boulay</div>
+                                    <div class="role">Présidents</div>
+                                    <div class="about">Fondée en 2020 par William et Mat, MW Multiservices est née de la volonté de fournir des services d’aménagement paysager et de lavage de vitres alliant qualité, fiabilité et professionnalisme. Depuis, nous avons accompagné plusieurs centaines de clients, bâtissant une solide réputation grâce à notre souci du détail et notre approche personnalisée. Aujourd’hui, notre équipe dévouée partage les mêmes valeurs d’excellence, de respect et de fiabilité, et travaille chaque jour pour sublimer les propriétés que nous avons la chance d’entretenir.</div>
                                 </div>
                             </div>
                         </div>
@@ -385,6 +375,7 @@
     <script src="./scripts/a-propos.js"></script>
 </body>
 </html>
+
 
 
 
