--- a/a-propos.html
+++ b/a-propos.html
@@ -152,7 +152,9 @@
                 <label for="check" class="sidebar-label">
                     <svg id="btn" width="26px" height="38px" viewBox="4 4 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="btn" d="M4 7a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H5a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H5a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H5a1 1 0 0 1-1-1z"></path></svg>
                 </label>
-                <button class="cta-btn" id="openFormBtn">Demander une soumission</button>
+                <button class="cta-btn" id="openFormBtn">
+                    <span>Demander une soumission</span>
+                </button>
             </nav>
         </header>
         <main>
@@ -375,6 +377,7 @@
     <script src="./scripts/a-propos.js"></script>
 </body>
 </html>
+
 
 
 
