--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
                             </video>
                             <div class="video-overlay"></div>
                         </div>
-                        <div class="contact-hero hero-main">
+                        <div class="contact-hero hero-main" style="justify-content: flex-end;">
                             <div class="contact-info">
                                 <h1>Parlez-nous<br>de votre projet.</h1>
                                 <ul class="contact-ul">
@@ -427,6 +427,7 @@
 </body>
 
 </html>
+
 
 
 
