--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="7 days">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#111111">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="MW Multiservices">
     <meta property="og:type" content="website">
@@ -427,6 +428,7 @@
 </body>
 
 </html>
+
 
 
 
