--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="max-container">
                     <div class="hero-wrap">
                         <div class="hero-video">
-                            <video autoplay muted loop playsinline id="bg-video">
+                            <video autoplay muted loop playsinline preload="auto" id="bg-video">
                                 <source src="/assets/hero.mp4" type="video/mp4">
                             </video>
                             <div class="video-overlay"></div>
@@ -471,6 +471,7 @@
     <script src="./scripts/testimonials.js"></script>
 </body>
 </html>
+
 
 
 
