--- a/realisations.html
+++ b/realisations.html
@@ -183,16 +183,16 @@
                             </div>
                             <div class="realisation-dropdown">
                                 <div class="dropdown-img">
-                                    <img src="./assets/grid2-v.JPG" alt="">
+                                    <img src="./assets/grid2-v.JPG" alt="Lavage de vitres résidentiel">
                                 </div>
                                 <div class="dropdown-img">
-                                    <img src="./assets/grid6-v.JPG" alt="">
+                                    <img src="./assets/grid6-v.JPG" alt="Lavage de vitres résidentiel">
                                 </div>
                                 <div class="dropdown-img">
-                                    <img src="./assets/grid7-v.JPG" alt="">
+                                    <img src="./assets/grid7-v.JPG" alt="Lavage de vitres résidentiel">
                                 </div>
                                 <div class="dropdown-img">
-                                    <img src="./assets/interieur.jpg" alt="">
+                                    <img src="./assets/interieur.jpg" alt="Lavage de vitres résidentiel">
                                 </div>
                             </div>
                             <div class="realisation-cell">
@@ -203,10 +203,10 @@
                             </div>
                             <div class="realisation-dropdown">
                                 <div class="dropdown-img">
-                                    <img src="./assets/grid4-v.JPG" alt="">
+                                    <img src="./assets/grid4-v.JPG" alt="Lavage de vitres commercial">
                                 </div>
                                 <div class="dropdown-img">
-                                    <img src="./assets/grid8-v.JPG" alt="">
+                                    <img src="./assets/grid8-v.JPG" alt="Lavage de vitres commercial">
                                 </div>
                             </div>
                             <div class="realisation-cell">
@@ -217,22 +217,22 @@
                             </div>
                             <div class="realisation-dropdown">
                                 <div class="dropdown-img">
-                                    <img src="./assets/amenagement.JPG" alt="">
+                                    <img src="./assets/amenagement.JPG" alt="Paysagement résidentiel">
                                 </div>
                                 <div class="dropdown-img">
-                                    <img src="./assets/grid1-p.jpeg" alt="">
+                                    <img src="./assets/grid1-p.jpeg" alt="Paysagement résidentiel">
                                 </div>
                                 <div class="dropdown-img">
-                                    <img src="./assets/entretienp.JPG" alt="">
+                                    <img src="./assets/entretienp.JPG" alt="Paysagement résidentiel">
                                 </div>
                                 <div class="dropdown-img">
-                                    <img src="./assets/grid3-p.jpeg" alt="">
+                                    <img src="./assets/grid3-p.jpeg" alt="Paysagement résidentiel">
                                 </div>
                                 <div class="dropdown-img">
-                                    <img src="./assets/grid5-p.jpeg" alt="">
+                                    <img src="./assets/grid5-p.jpeg" alt="Paysagement résidentiel">
                                 </div>
                                 <div class="dropdown-img">
-                                    <img src="./assets/haies.JPG" alt="">
+                                    <img src="./assets/haies.JPG" alt="Paysagement résidentiel">
                                 </div>
                             </div>
                             <div class="realisation-cell">
@@ -243,7 +243,10 @@
                             </div>
                             <div class="realisation-dropdown">
                                 <div class="dropdown-img">
-                                    <img src="./assets/" alt="">
+                                    <img src="./assets/p_c1.JPG" alt="Paysagement commercial">
+                                </div>
+                                <div class="dropdown-img">
+                                    <img src="./assets/p_c2.JPG" alt="Paysagement commercial">
                                 </div>
                             </div>
                         </div>
@@ -379,7 +382,5 @@
     <script src="./scripts/realisations.js"></script>
 </body>
 </html>
-
-
 
 
