--- a/realisations.html
+++ b/realisations.html
@@ -243,7 +243,7 @@
                             </div>
                             <div class="realisation-dropdown">
                                 <div class="dropdown-img">
-                                    <img src="./assets/p_c1.JPG" alt="Paysagement commercial">
+                                    <img src="./assets/p_c1.jpg" alt="Paysagement commercial">
                                 </div>
                                 <div class="dropdown-img">
                                     <img src="./assets/p_c2.JPG" alt="Paysagement commercial">
@@ -382,5 +382,6 @@
     <script src="./scripts/realisations.js"></script>
 </body>
 </html>
+
 
 
